# telebruh

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: protocol-config.cmake.in
cmake/modules/: BuildHelpers.cmake  PrepareQt.cmake  PreparegRPC.cmake
res/: app.qrc  main.qml
res/components/: BruhButton.qml  BruhPasswordField.qml  BruhTextField.qml
res/views/: LoginView.qml
scripts/: msvc.ps1  vc160_build.bat
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  HealthCheckServiceImpl.cpp  HealthCheckServiceImpl.hpp  core.cpp  core.hpp
src/protocol/: .gitignore  CMakeLists.txt
src/protocol/protos/: health_check_service.proto  hello_world_service.proto  proxy.proto
test/app/: CMakeLists.txt
test/core/: CMakeLists.txt
